--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel = "stylesheet" href = "styles.css" />
     </head>
     <body>
         <img src = "http://www.smcoe.org/assets/img/parents-and-students/attendance_hands.jpg">
