--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>That Was Easy</title>
         <link rel = "stylesheet" href = "styles.css" />
     </head>
     <body>
@@ -8,5 +9,10 @@
         <h1>Attendance Keeper</h1>
         <p>For Avi,</p>
         <p>the best attendance keeper in the world!</p>
+        
+        <button id = "easy">Easy</button>
+        
+        <script src = "https://code.jquery.com/jquery-2.2.3.min.js"></script>
+        <script src = "main.js"></script>
     </body>
 </html>
